syntax = "proto3";

package courier;

service CourierService {
  rpc Dispatch(Request) returns (Response) {}
  rpc ShowAll(ShowRequest) returns (Result) {}
  rpc Create(Courier) returns (Response) {}
}

message Courier {
  string courier_id = 1;
  int32 capacity = 2;
  int32 max_weight = 3;
  bool available = 4;
  string name = 5;
  repeated string order_id = 6;
}

message Request {
  int32 quantity = 1;
  int32 weight = 2;
  string order_id =3;
}

message ShowRequest {}

message Result {
  repeated Courier couriers = 1;
}

message Response {
  bool dispatched = 1;
  Courier courier = 2;
}
